--- a/rtl.css
+++ b/rtl.css
@@ -33,19 +33,22 @@ textarea {
 	padding-right: 3px;
 }
 
-ol {
-	counter-reset: item;
-}
-
-ol li:before {
-	left: auto;
-	right: -1.5em;
-}
-
 li > ul,
 li > ol {
 	margin-left: 0;
 	margin-right: 1.5em;
+}
+
+th:first-child,
+td:first-child {
+	padding-left: 0.4em;
+	padding-right: 0;
+}
+
+th:last-child,
+td:last-child {
+	padding-left: 0;
+	padding-right: 0.4em;
 }
 
 /* Forms */
@@ -92,11 +95,15 @@ input[type="checkbox"] {
 
 /* Front Page */
 
+.wp-custom-header-video-button {
+	left: 30px;
+	right: auto;
+}
+
 .twentyseventeen-panel .recent-posts .entry-header .edit-link {
 	margin-left: 0;
 	margin-right: 1em;
 }
-
 
 /* Blog, Archive, Search */
 
@@ -111,9 +118,9 @@ input[type="checkbox"] {
 	margin-right: 0;
 }
 
-.sticky .icon-pinned {
+.sticky .icon-thumb-tack {
 	left: auto;
-	right: -1em;
+	right: -1.5em;
 }
 
 .prev.page-numbers .icon,
@@ -130,6 +137,16 @@ input[type="checkbox"] {
 
 .next.page-numbers {
 	float: left;
+}
+
+.nav-links .nav-previous .nav-title .nav-title-icon-wrapper {
+	margin-left: 0.5em;
+	margin-right: 0;
+}
+
+.nav-links .nav-next .nav-title .nav-title-icon-wrapper {
+	margin-left: 0;
+	margin-right: 0.5em;
 }
 
 /* Blog Entries */
@@ -174,17 +191,6 @@ input[type="checkbox"] {
 }
 
 .children .comment-author .avatar {
-	left: auto;
-	right: -45px;
-}
-
-.bypostauthor > .comment-body > .comment-meta > .comment-author:before {
-	left: auto;
-	right: -65px;
-	margin: -6px -6px 0 0;
-}
-
-.children .bypostauthor > .comment-body > .comment-meta > .comment-author:before {
 	left: auto;
 	right: -45px;
 }
@@ -236,6 +242,14 @@ input[type="checkbox"] {
 	padding-right: 1.5rem;
 }
 
+.widget_text ul {
+	margin: 0 1.5em 1.5em 0;
+}
+
+.widget_text ul li ul {
+	margin: 0 1.5em 0 0;
+}
+
 /* Footer */
 
 .social-navigation a {
@@ -255,6 +269,13 @@ input[type="checkbox"] {
 .gallery-item,
 .gallery-caption {
 	text-align: right;
+}
+
+/* SVG Fallback */
+
+.no-svg .dropdown-toggle {
+	left: 0;
+	right: auto;
 }
 
 /* Media queries */
@@ -344,6 +365,11 @@ input[type="checkbox"] {
 		right: auto;
 	}
 
+	.site-header .menu-scroll-down {
+		left: 0;
+		right: auto;
+	}
+
 	.entry-title a {
 		margin-left: auto;
 		margin-right: -2px;
@@ -368,23 +394,25 @@ input[type="checkbox"] {
 
 	/* Blog, Archive, Search */
 
-	.sticky .icon-pinned {
+	.sticky .icon-thumb-tack {
 		left: auto;
 		right: -2.5em;
 	}
 
-	body:not(.has-sidebar) .page-header,
+	body:not(.has-sidebar):not(.page-one-column) .page-header,
 	body.has-sidebar.error404 #primary .page-header,
-	body.page-two-column #primary .entry-header {
+	body.page-two-column:not(.archive) #primary .entry-header,
+	body.page-two-column.archive:not(.has-sidebar) #primary .page-header {
 		float: right;
 	}
 
 	.blog:not(.has-sidebar) #primary article,
-	.archive:not(.has-sidebar) #primary article,
+	.archive:not(.has-sidebar):not(.page-one-column) #primary article,
 	.search:not(.has-sidebar) #primary article,
 	.has-sidebar.error404 #primary .page-content,
 	.error404.has-sidebar #primary .page-content,
-	body.page-two-column #primary .entry-content {
+	body.page-two-column:not(.archive) #primary .entry-content,
+	body.page-two-column #comments {
 		float: left;
 	}
 
@@ -442,7 +470,8 @@ input[type="checkbox"] {
 		float: left;
 	}
 
-	.has-sidebar .navigation.pagination {
+	.has-sidebar .navigation.pagination,
+	.archive.page-one-column:not(.has-sidebar) .navigation.pagination {
 		float: none;
 	}
 
@@ -499,17 +528,17 @@ input[type="checkbox"] {
 	}
 }
 
-@media screen and ( min-width: 67em ) {
+@media screen and (min-width: 67em) {
 
 	/* Sticky posts */
 
-	.sticky .icon-pinned {
+	.sticky .icon-thumb-tack {
 		left: auto;
 		right: -1.25em;
 	}
 }
 
-@media screen and ( min-width: 79em ) {
+@media screen and (min-width: 79em) {
 
 	.has-sidebar #primary .entry-content blockquote.alignright,
 	.has-sidebar #primary .entry-content blockquote.alignright.below-entry-meta {
